# ZHMS

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  prj.conf
boards/: esp32s3_devkitc.conf  esp32s3_devkitc.overlay
config/: zhms.local.conf.example
docs/硬件资源说明/: 开发板硬件资源说明.md
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/max30102/: CMakeLists.txt  Kconfig  max30102.c  max30102.h
dts/bindings/sensor/: maxim,max30102.yaml
src/: main.c
src/services/: health_metrics.c  health_metrics.h  max30102_acquisition.c  max30102_algorithm.c  max30102_service.c  max30102_service.h  max30102_service_internal.h  max30102_stream.h  mqtt_service.c  mqtt_service.h  ppg_peak_detect.c  ppg_peak_detect.h  ppg_preprocess.c  ppg_preprocess.h  time_sync.c  time_sync.h  wifi.c  wifi.h
src/ui/: lcd_display.c  lcd_display.h  ui_pages.c  ui_pages.h
tools/health_metrics/: __init__.py  common.py
tools/health_metrics/tests/: test_common.py
tools/max30102_realtime/: __init__.py
tools/max30102_realtime/tests/: test_driver_source_contract.py  test_service_source_contract.py
tools/ppg_baseline/: __init__.py  capture_task2_sample.py  common.py  render_task2_plots.py
tools/ppg_baseline/tests/: test_capture_task2_sample.py  test_render_task2_plots.py
tools/ppg_peak_detect/: __init__.py  analyze_task4_peaks.py  common.py  render_task4_board_overlay.py
tools/ppg_peak_detect/tests/: test_analyze_task4_peaks.py  test_common.py  test_detector_source_contract.py  (+1 more)
tools/ppg_preprocess/: __init__.py  capture_task3_sample.py  common.py  render_task3_compare.py
(+4 files in other folders)
